--- a/react-client/src/components/Login/Login.scss
+++ b/react-client/src/components/Login/Login.scss
@@ -1,23 +1,15 @@
-.login-form {
-  text-align: center;
-  margin-top: 20vh;
-  margin-left: 30vw;
-  margin-right: 30vw;
-  background: #EEE;
-  height: 40vh;
-  border-radius: 10px;
+@import '../../styles/variables';
 
-  .control {
-    text-align: center;
-    padding-left: 2vw;
-    padding-right: 2vw;
-  }
+.card {
+  border-radius: 23px;
+  background: $theme-xanadu;
+  width: auto;
+  margin: 10vh 25vw 5vh;
+  padding: 1vh 1vh 1vh;
+}
 
-  .label {
-    padding-top: 5vh;
-  }
-
-  .button {
-    margin-top: 5vh;
-  }
+#layered-background {
+  border-radius: 20px;
+  background: $theme-charleston-green;
+  padding: 5vh 5vw 5vh;
 }
