--- a/react-client/src/styles/index.scss
+++ b/react-client/src/styles/index.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
+@import 'variables';
 
 .App {
-  background-color: #282c34;
+  background-color: $theme-isabelline;
   min-height: 100vh;
 }
 
