feat: Basic chat page showing static and simple messages

--- a/react-client/src/styles/index.scss
+++ b/react-client/src/styles/index.scss
@@ -1,15 +1,9 @@
 @charset "utf-8";
 @import 'variables';
 
-.App {
+#root {
   background-color: $theme-isabelline;
   min-height: 100vh;
-}
-
-.Header {
-  color: white;
-  text-align: center;
-  padding-top: 5vh;
 }
 
 // Importing all of Bulma
