feat: Really rough message component, but it's coming along

--- a/react-client/src/styles/index.scss
+++ b/react-client/src/styles/index.scss
@@ -1,6 +1,10 @@
 @charset "utf-8";
 @import 'variables';
 
+body {
+  color: $theme-ash-grey !important;
+}
+
 #root {
   background-color: $theme-isabelline;
   min-height: 100vh;
