--- a/react-client/src/components/ChatMessage/ChatMessage.scss
+++ b/react-client/src/components/ChatMessage/ChatMessage.scss
@@ -7,11 +7,12 @@
     background: $theme-xanadu;
     border-radius: 20px;
     display: inline-block;
-    padding: 4px;
+    padding: 6px;
+  }
 
-    h1 {
-      margin: 5px
-    }
+  h2 {
+    color: $theme-isabelline;
+    margin-left: 6px;
   }
 
 }
