feat: Added current user display to header

--- a/react-client/src/styles/_variables.scss
+++ b/react-client/src/styles/_variables.scss
@@ -8,4 +8,6 @@ $theme-ash-grey: #2E2C2F;
 $colors: (
         "xanadu-light": ($theme-xanadu, $theme-isabelline),
         "xanadu-dark": ($theme-xanadu, $theme-deep-space-sparkle),
+        "charleston-green-light": ($theme-charleston-green, $theme-isabelline),
+        "charleston-green-dark": ($theme-charleston-green, $theme-deep-space-sparkle),
 );
