--- a/react-client/src/components/Chat/Chat.scss
+++ b/react-client/src/components/Chat/Chat.scss
@@ -15,12 +15,17 @@ body,
 
   .hero {
     flex: 0 1 auto;
+
+    img {
+      width: 5.5vw;
+      height: auto;
+    }
   }
 
   .chat-container {
     margin: 2vh 10vw;
     flex: 1 0 auto;
-    border-radius: 20px;
+    border-radius: 20px 20px 0 20px;
     overflow-y: auto;
     height: 80vh;
     background: $theme-charleston-green;
