feat: Added geolocation feature to addional details menu

--- a/react-client/src/components/Modal/Modal.scss
+++ b/react-client/src/components/Modal/Modal.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables.scss';
 
 .modal {
-    .input {
-      margin-bottom: 1vh;
-    }
+  .input, .button {
+    margin-bottom: 1vh;
+  }
 }
