feat: Minor data validation on details modal

--- a/react-client/src/styles/_variables.scss
+++ b/react-client/src/styles/_variables.scss
@@ -10,4 +10,5 @@ $colors: (
         "xanadu-dark": ($theme-xanadu, $theme-deep-space-sparkle),
         "charleston-green-light": ($theme-charleston-green, $theme-isabelline),
         "charleston-green-dark": ($theme-charleston-green, $theme-deep-space-sparkle),
+        "deep-space-sparkle": ($theme-deep-space-sparkle, $theme-isabelline),
 );
