feat: Added additional details to be conditionally rendered to the message

--- a/react-client/src/components/MessageCard/MessageCard.scss
+++ b/react-client/src/components/MessageCard/MessageCard.scss
@@ -8,6 +8,10 @@
     border-radius: 20px;
     display: inline-block;
     padding: 6px;
+
+    .level:not(:last-child) {
+      margin-bottom: 0;
+    }
   }
 
   h1, h2, h6 {
