chore: Drastically reduced size of modal component

--- a/react-client/src/components/Modal/Modal.scss
+++ b/react-client/src/components/Modal/Modal.scss
@@ -16,5 +16,10 @@
     padding: 4px;
     margin-top: 2vh;
     border-radius: 20px;
+
+    img {
+      border-radius: 18px;
+      height: 100%;
+    }
   }
 }
