style: Updating style so that scroll bar is not shown

--- a/react-client/src/styles/index.scss
+++ b/react-client/src/styles/index.scss
@@ -1,6 +1,10 @@
 @charset "utf-8";
 @import 'variables';
 
+html {
+  overflow-y: hidden !important;
+}
+
 body {
   color: $theme-ash-grey !important;
 }
