--- a/react-client/src/components/ChatContainer/ChatContainer.scss
+++ b/react-client/src/components/ChatContainer/ChatContainer.scss
@@ -15,8 +15,13 @@
     flex-grow: 1;
   }
 
-  .join-message {
+  .alert {
     text-align: center;
+    margin-bottom: 1vh;
+  }
+
+  .error {
+    color: crimson;
   }
 
   #details-button {
